fix(blog): fix scroll issue on mobile

--- a/apps/blog/src/components/RootLayout/Style.module.scss
+++ b/apps/blog/src/components/RootLayout/Style.module.scss
@@ -1,5 +1,5 @@
 .RootLayout {
-  height: 100vh;
+  height: 100dvh;
   width: 100vw;
 
   .navigationSideBarWrapper {
